--- a/ticketsystem/pom.xml
+++ b/ticketsystem/pom.xml
@@ -115,6 +115,11 @@
 			<artifactId>ehcache-spring-annotations</artifactId>
 			<version>1.2.0</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.2</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>ticketsystem</finalName>
