--- a/ticketsystem/src/main/resources/jdbc.properties
+++ b/ticketsystem/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 mysql.driver=com.mysql.jdbc.Driver
-mysql.url=jdbc:mysql://localhost:3306/tests
+mysql.url=jdbc:mysql://localhost:3306/test
 mysql.user=root
-mysql.password=123
+mysql.password=123456
